<resources>
    <string name="app_name">DukaBoost</string>
    <string name="first_slide">Choose Your Product</string>
    <string name="second_slide">Fast Delivery</string>
    <string name="third_slide">Good Servive</string>
    <string name="description">DukaBoost</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BrianMugambi</string>
    <string name="nav_header_subtitle">brianmugambi370@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>



    <string name="menu_home">Home</string>
    <string name="Category">Category</string>
    <string name="Profile">Profile</string>
    <string name="LogOut">Log_out</string>
    <string name="share">Share</string>

    <string name="Cart">MyCart</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>