<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#009688"
    tools:showIn="navigation_view"
   >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/cartFragment"
            android:icon="@drawable/baseline_add_shopping_cart_24"
            android:title="@string/Cart" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_account_box_24"
            android:title="@string/Profile" />
    </group>

        <item
            android:title="Account &amp; Actions"
            android:textColor="@color/white">
            <menu>
                <group android:checkableBehavior="single">
                <item
                    android:id="@+id/share"
                    android:icon="@drawable/share_icon"
                    android:title="@string/share" />
                <item
                    android:id="@+id/Log_out"
                    android:icon="@drawable/baseline_logout_24"
                    android:title="@string/LogOut" />
                </group>

            </menu>

        </item>

</menu>